k8s/mysql/mysql-statefulset.yaml
# mysql-statefulset.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: hertz-tuning-dev
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      containers:
      - name: mysql
        image: mysql:8.0
        volumeMounts:
        - name: mysql-storage
          mountPath: /var/lib/mysql
        ports:
        - containerPort: 3306
      volumes:
      - name: mysql-storage
        persistentVolumeClaim:
          claimName: mysql-pvc
          
---
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: hertz-tuning-dev
spec:
  ports:
    - port: 3306
      name: mysql
  selector:
    app: mysql
  type: ClusterIP
